fixed some overflow problems

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -19,8 +19,7 @@
 
     #dashboard {
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+        
         align-items: center;
         height: 85vh;
         margin-top: 5vh;
